fix: fix interactivity with breadcrumbs links by adding z-index of 1 to its wrapper

--- a/src/routes/item_route/ItemRoute.module.css
+++ b/src/routes/item_route/ItemRoute.module.css
@@ -18,6 +18,7 @@
   position: absolute;
   inset-inline-start: var(--size-scale-200);
   inset-block-start: var(--size-scale-100);
+  z-index: 1;
 }
 
 .breadcrumbsList {
